updates + comments