@@ -1,20 +1,27 @@
 package estafet.java11;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class MyFileCreator {
 
+    /**
+     * Write a CharSequence to a file.
+     * @param path Path
+     * @param text String
+     * @throws IOException
+     */
     public static void createTextFile(Path path, String text) throws IOException {
-        Files.write(path, text.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, text);
     }
 
+    /**
+     * Reads all content from a file
+     * @param path Path
+     * @throws IOException
+     */
     public static void printFileContent(Path path) throws IOException {
         System.out.println(Files.readString(path));
     }
-
-
 }
