@@ -1,18 +1,11 @@
 package estafet.java12;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class MyFile {
-
-
     public static void createTextFile(Path path, String text) throws IOException {
-        Files.write(path, text.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, text);
     }
-
-
-
 }
